# sentinel

./: .gitignore  README.md  claude.md  compose.yml  et --hard 08bb6b1  package-lock.json
apilens_backend/: pyproject.toml  vercel.json
apilens_backend/api/: __init__.py  router.py
apilens_backend/api/apps/: router.py  schemas.py
apilens_backend/api/auth/: router.py  schemas.py
apilens_backend/api/ingest/: router.py  schemas.py
apilens_backend/api/users/: router.py  schemas.py
apilens_backend/apps/auth/: admin.py  managers.py  models.py  services.py
apilens_backend/apps/auth/templates/auth/emails/: magic_link.html
apilens_backend/apps/endpoints/: apps.py
apilens_backend/apps/projects/: admin.py  managers.py  models.py  services.py
apilens_backend/apps/projects/management/commands/: clickhouse_migrate.py  seed_api_requests.py
apilens_backend/apps/users/: admin.py  models.py  services.py
apilens_backend/apps/users/migrations/: 0001_initial.py
apilens_backend/config/: settings.py  urls.py  wsgi.py
apilens_backend/core/auth/: __init__.py  authentication.py  context.py  jwt.py
apilens_backend/core/cache/: decorators.py  redis.py
apilens_backend/core/database/: models.py
apilens_backend/core/database/clickhouse/: client.py  migrate.py  models.py
apilens_backend/core/database/clickhouse/management/commands/: clickhouse_migrate.py
apilens_backend/core/exceptions/: base.py
apilens_backend/core/utils/: geoip.py
apilens_backend/scripts/: vercel_build.sh
apilens_backend/tests/: __init__.py
apilens_frontend/: package-lock.json  package.json
(+247 files in other folders)
